--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,86 @@
 body {
     font-family: 'VT323', monospace;
 }
+
+header {
+    text-align: center;
+}
+
+.board {
+    border: 1px solid black;
+    display: grid;
+    grid-template-columns: 6fr 2fr;
+    width: 300px;
+    margin: 0 auto;
+}
+
+.left {
+    border: 1px solid red;
+    display: grid;
+    grid-template-rows: repeat(12, 1fr);
+}
+
+.pin_container {
+    /* border: 1px solid palevioletred; */
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: space-around;
+    align-items: center;
+    padding: 3px auto 0 auto;
+}
+
+#answer {
+    border-bottom: 5px solid brown;
+    margin-top: 10px;
+    padding-bottom: 5px;
+}
+
+#guess {
+    border-top: 5px solid brown;
+    padding: 2px;
+}
+
+.big_pin {
+    border: 1px solid rgb(133, 92, 59);
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.right {
+    border: 1px solid pink;
+    display: grid;
+    grid-template-rows: repeat(12, 1fr);
+}
+
+.ans_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-around;
+    align-items: center;
+    padding: 3px auto;
+}
+
+.small_pin {
+    border: 1px solid rgb(133, 92, 59);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#color_select {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    border-top: 5px solid brown;
+}
+
+.selector_pin {
+    border: 1px solid blue;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    margin: 1px auto;
+}
