--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ header {
 }
 
 .left {
-    border: 1px solid red;
+    border-right: 1px solid brown;
     display: grid;
     grid-template-rows: repeat(12, 1fr);
 }
@@ -30,30 +30,35 @@ header {
     grid-template-columns: repeat(4, 1fr);
     justify-content: space-around;
     align-items: center;
-    padding: 3px auto 0 auto;
+    padding: 0;
 }
 
 #answer {
     border-bottom: 5px solid brown;
     margin-top: 10px;
-    padding-bottom: 5px;
+    margin-bottom: 5px;
+    text-align: center;
+    align-items: center;
 }
 
 #guess {
     border-top: 5px solid brown;
-    padding: 2px;
+    padding-top: 14px;
+    padding-bottom: 8px;
+    margin-top: 2px;
 }
 
 .big_pin {
     border: 1px solid rgb(133, 92, 59);
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
     margin: 0 auto;
+    padding: 0;
 }
 
 .right {
-    border: 1px solid pink;
+    /* border: 1px solid pink; */
     display: grid;
     grid-template-rows: repeat(12, 1fr);
 }
@@ -63,7 +68,8 @@ header {
     grid-template-columns: 1fr 1fr;
     justify-content: space-around;
     align-items: center;
-    padding: 3px auto;
+    padding: 0 auto;
+    margin-top: 2px;
 }
 
 .small_pin {
@@ -82,7 +88,7 @@ header {
 }
 
 .selector_pin {
-    border: 1px solid blue;
+    border: 1px solid rgb(133, 92, 59);
     width: 18px;
     height: 18px;
     border-radius: 50%;
