--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,36 @@ header {
     text-align: center;
 }
 
+main {
+    display: grid;
+    grid-template-columns: 4fr 3fr;
+}
+
+.main_left {
+    border: 1px solid fuchsia;
+ display: flex;
+ justify-content: flex-end;
+ /* align-items: ; */
+}
+
+.main_right {
+    border: 1px solid fuchsia;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+.gameplay {
+    border: 1px solid pink;
+    display: flex;
+}
+
 .board {
     border: 1px solid black;
     display: grid;
     grid-template-columns: 6fr 2fr;
     width: 300px;
-    margin: 0 auto;
+    margin-right: 20px;
 }
 
 .left {
@@ -116,4 +140,19 @@ header {
 
 #s_purple {
     background-color: purple;
+}
+
+.button {
+    border: 4px solid rgb(212, 212, 212);
+    display: flex;
+    border-radius: 10px;
+    width: 150px;
+    height: 50px;
+    margin: 5px;
+    font-size: 28px;
+    padding: 2px;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(197, 197, 197);
+    color: rgb(248, 248, 248);
 }
