main functionality of board working

--- a/css/main.css
+++ b/css/main.css
@@ -160,27 +160,27 @@ h4 {
     background-color: rgb(184, 161, 134);
 }
 #s_red {
-    background-color: #faadbb;
+    background-color: #ff8097;
 }
 
 #s_blue {
-    background-color: #abdde6;
+    background-color: #92d6e2;
 }
 
 #s_green {
-    background-color: #b2ecad;
+    background-color: #9fec98;
 }
 
 #s_yellow {
-    background-color: #f6e9b3;
+    background-color: #ffe992;
 }
 
 #s_orange {
-    background-color: #ffc59e;
+    background-color: #ffa66b;
 }
 
 #s_purple {
-    background-color: #b4a1e2;
+    background-color: #a38add;
 }
 
 .button {
