--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 body {
     font-family: 'VT323', monospace;
     text-align: center;
-    background-color: #fffcf2;
+    background-color: #d8ca9e;
 }
 
 header {
