--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@ h4 {
     color: red;
     padding: 20px;
     margin: 5px;
+    height: 70px;
 }
 
 .board {
@@ -139,7 +140,7 @@ h4 {
     margin: 0 auto;
     line-height: 0;
     font-size: 15px;
-    background-color: rgb(184, 161, 134);
+    background-color: rgb(238, 207, 172);
 }
 
 #color_select {
