--- a/css/main.css
+++ b/css/main.css
@@ -54,9 +54,9 @@ h4 {
 
 .feedback_container {
     color: red;
-    padding: 20px;
-    margin: 5px;
     height: 70px;
+    font-size: 20px;
+    padding-top: 20px;
 }
 
 .board {
@@ -77,12 +77,15 @@ h4 {
 }
 
 .pin_container {
-    /* border: 1px solid palevioletred; */
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-content: space-around;
     align-items: center;
     padding: 0;
+}
+
+#guess10, #guess9, #guess8, #guess7, #guess6, #guess5, #guess4, #guess3, #guess2 {
+    border-bottom: 1px dashed #D7B791;
 }
 
 #guess {
@@ -106,7 +109,7 @@ h4 {
 #answer {
     border-bottom: 3px solid #D7B791;
     margin-top: 10px;
-    margin-bottom: 5px;
+    padding-bottom: 10px;
     text-align: center;
     align-items: center;
 }
@@ -130,6 +133,10 @@ h4 {
     align-items: center;
     padding: 0 auto;
     margin-top: 2px;
+}
+
+#ans10, #ans9, #ans8, #ans7, #ans6, #ans5, #ans4, #ans3, #ans2, #none {
+    border-bottom: 1px dashed #D7B791;
 }
 
 .small_pin {
