--- a/css/main.css
+++ b/css/main.css
@@ -206,3 +206,22 @@ h4 {
     background-color: rgb(197, 197, 197);
     color: rgb(255, 255, 255);
 }
+
+
+.swal-overlay {
+    background-color: rgba(158, 139, 114, 0.45);
+  }
+
+  .swal-button {
+    padding: 7px 19px;
+    border-radius: 2px;
+    background-color: #e6c174;
+    font-size: 12px;
+    border: 1px solid #fae9c8;
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+    
+  }
+
+  .sweet-hover:not([disabled]):hover {
+      background-color:  #fdce69;
+  }
