select pins then color function works

--- a/css/main.css
+++ b/css/main.css
@@ -168,27 +168,27 @@ h4 {
     line-height: 20%;
     background-color: rgb(184, 161, 134);
 }
-#s_red {
+#red {
     background-color: #ff8097;
 }
 
-#s_blue {
+#blue {
     background-color: #92d6e2;
 }
 
-#s_green {
+#green {
     background-color: #9fec98;
 }
 
-#s_yellow {
+#yellow {
     background-color: #ffe992;
 }
 
-#s_orange {
+#orange {
     background-color: #ffc59e;
 }
 
-#s_purple {
+#purple {
     background-color: #b4a1e2;
 }
 
