--- a/css/main.css
+++ b/css/main.css
@@ -225,3 +225,29 @@ h4 {
   .sweet-hover:not([disabled]):hover {
       background-color:  #fdce69;
   }
+
+
+  @media screen and (min-width: 320px) and (max-width: 425px) {
+      h1 {
+          font-size: 40px;
+      }
+
+      h4 {
+          font-size: 18px;
+      }
+
+      .board {
+        margin-right: 2px;
+      }
+
+      .button {
+          width: 70px;
+          height: 70px;
+          border-radius: 50%;
+          font-size: 12px;
+      }
+
+      .gameplay {
+          display: block;
+      }
+  }
