--- a/css/main.css
+++ b/css/main.css
@@ -227,30 +227,113 @@ h4 {
   }
 
 
-  @media screen and (min-width: 320px) and (max-width: 425px) {
+  @media screen and (min-width: 320px) and (max-width: 375px) {
       h1 {
-          font-size: 40px;
+          font-size: 30px;
       }
 
       h4 {
-          font-size: 18px;
+          font-size: 12px;
       }
 
       .board {
+        width: 240px;
         margin-right: 2px;
+        /* height: 550px; */
       }
 
+      .big_pin, .guess_pin {
+        border: 2px solid  rgb(248, 248, 248);
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        margin: 0 auto;
+        padding: 0;
+        background-color: rgb(207, 187, 165);
+        line-height: 110%;
+    }
+
+    .selector_pin {
+        border: 2px solid rgb(248, 248, 248);
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+        margin: 2px auto;
+        font-size: 20px;
+        line-height: 20%;
+        background-color: rgb(184, 161, 134);
+    }
+
+    .pin_container {
+        margin: 0px;
+    }
+
       .button {
-          width: 70px;
-          height: 70px;
-          border-radius: 50%;
-          font-size: 12px;
+          width: 60px;
+          height: 30px;
+          border-radius: 10px;
+          font-size: 10px;
+          border: 2px solid rgb(231, 231, 231);
       }
 
       .gameplay {
           display: block;
       }
   }
+
+  @media screen and (min-width: 375px) and (max-width: 425px) {
+    h1 {
+        font-size: 30px;
+    }
+
+    h4 {
+        font-size: 12px;
+    }
+
+    .board {
+      width: 280px;
+      margin-right: 2px;
+      /* height: 550px; */
+    }
+
+    .big_pin, .guess_pin {
+      border: 2px solid  rgb(248, 248, 248);
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      margin: 0 auto;
+      padding: 0;
+      background-color: rgb(207, 187, 165);
+      line-height: 110%;
+  }
+
+  .selector_pin {
+      border: 2px solid rgb(248, 248, 248);
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      margin: 2px auto;
+      font-size: 20px;
+      line-height: 20%;
+      background-color: rgb(184, 161, 134);
+  }
+
+  .pin_container {
+      margin: 0px;
+  }
+
+    .button {
+        width: 70px;
+        height: 40px;
+        border-radius: 10px;
+        font-size: 12px;
+        border: 2px solid rgb(231, 231, 231);
+    }
+
+    .gameplay {
+        display: block;
+    }
+}
 
 
   @media screen and (min-width: 425px) and (max-width: 768px) {
